# terminus-cmake

./: .gitignore  CMakeLists.txt  README.md  changelog.md  conanfile.py
cmake/: terminus_cmake.cmake  terminus_cmake_apps.cmake  terminus_cmake_colors.cmake  terminus_cmake_coverage.cmake  terminus_cmake_libs.cmake  terminus_cmake_project.cmake  terminus_cmake_protobuf.cmake  terminus_cmake_test.cmake  terminus_cmake_util.cmake
scripts/: conan-build.sh  local-build.bash  log.bash
test/unit/: CMakeLists.txt
test/unit/terminus_cmake_protobuf_test/: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
test/unit/terminus_cmake_protobuf_test/proto/: person.proto  svc_directory.proto
test/unit/terminus_cmake_protobuf_test/proto/education/: school.proto  student.proto  teacher.proto
